[metadata]
name = streamers
version = 1.3.1
author = Nate Gibson
author_email = natebgibson@gmail.com
description = A CLI tool to see who you follow on twitch is streaming and watch them.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nbgibson/streamers
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
  requests >=2.26.0,<3.0
  streamlink>=5.3.0
python_requires = >= 3.7
include_package_data = true

[options.entry_points]
console_scripts =
    streamers = streamers:main
